# irritator

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  NEWS  README.adoc  appveyor.yml  readmefilter.md
.github/workflows/: linux.yml  macos.yml  windows.yml
app/: CMakeLists.txt
app/gui/: CMakeLists.txt  application.cpp  application.hpp  component-editor.cpp  component-model-selector.cpp  component-selector.cpp  component.cpp  components-window.cpp  data-window.cpp  dialog-file.cpp  dialog.cpp  dialog.hpp  editor.cpp  editor.hpp  flat-simulation-editor.cpp  generic-editor.cpp  graph-editor.cpp  grid-editor.cpp  gui.hpp  hierarchy-window.cpp  hsm-editor.cpp  icon-fonts.cpp  imconfig.h  imnodes.cpp  imnodes.hpp  implot.h  internal.cpp  internal.hpp  io.cpp  library-window.cpp  main-unix.cpp  main-windows.cpp  memory-window.cpp  modeling-editor.cpp  modeling-window.cpp  node-editor.cpp  node-editor.hpp  notification.cpp  output-editor.cpp  plot-copy-widget.cpp  (+15 more)
app/gui/generic/: modeling.cpp  simulation.cpp
app/gui/graph/: modeling.cpp  observation.cpp  simulation.cpp
app/gui/grid/: modeling.cpp  observation.cpp  simulation.cpp
app/gui/hsm/: modeling.cpp  simulation.cpp
app/gui/simulation/: modeling.cpp
app/src/: main.cpp
examples/continuous/: Catalyst.irt  Pendulum.irt
examples/diffusion/: cell.irt  grid.irt
lib/: CMakeLists.txt  irritator.pc.in
lib/benchmark/: benchmark.cpp  benchmark2.cpp  benchmark_exactitude_aqss.cpp  benchmark_exactitude_qss1.cpp  benchmark_exactitude_qss2.cpp  benchmark_exactitude_qss3.cpp  benchmark_timing_aqss.cpp  benchmark_timing_qss1.cpp  benchmark_timing_qss2.cpp  benchmark_timing_qss3.cpp
lib/cmake/: IrritatorConfig.cmake.in
lib/include/irritator/: archiver.hpp  container.hpp  core.hpp  dot-parser.hpp  error.hpp  examples.hpp  ext.hpp  external_source.hpp  file.hpp  format.hpp  global.hpp  helpers.hpp  hsm.hpp  io.hpp  macros.hpp  modeling-helpers.hpp  modeling.hpp  observation.hpp  random.hpp  thread.hpp  timeline.hpp
lib/src/: adder.cpp  archiver.cpp  counter.cpp  dot-parser.cpp  dot-parser.hpp  error.cpp  external_source.cpp  file-observer.cpp  file.cpp  filesystem.cpp  generator.cpp  global.cpp  graph-observer.cpp  grid-observer.cpp  grid-sim-obs.cpp  hsm.cpp  io.cpp  json.cpp  memory-resource.cpp  modeling-generic.cpp  modeling-graph.cpp  modeling-grid.cpp  modeling-internal.cpp  modeling-simulation.cpp  modeling.cpp  parameter.cpp  parameter.hpp  project.cpp  simulation.cpp  timeline.cpp  var-sim-obs.cpp  variable-observer.cpp
lib/test/: auditory.cpp  benchmark.cpp  containers.cpp  dot-parser-test.cpp  mod-to-sim.cpp  public-api.cpp  qss.cpp  simulations.cpp  threading.cpp
